<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.thelimiter.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_money"
        android:name="com.example.thelimiter.ui.money.MoneyFragment"
        android:label="@string/menu_budget"
        tools:layout="@layout/fragment_money" />

    <fragment
        android:id="@+id/nav_data"
        android:name="com.example.thelimiter.ui.data.DataFragment"
        android:label="@string/menu_mbl_data"
        tools:layout="@layout/fragment_data" />
</navigation>